feat[question-answer] 1.重构代码
